<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home">

    </item>
    <item
            android:id="@+id/navigation_schedule"
            android:icon="@drawable/ic_timelapse_black_24dp"
            android:title="@string/title_schedule"/>

    <item
            android:id="@+id/navigation_team"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/title_team"/>

    <item
            android:id="@+id/navigation_news"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_news"/>

    <item
            android:id="@+id/navigation_my"
            android:icon="@drawable/ic_emoji_black_24dp"
            android:title="@string/title_my"/>
</menu>