<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.page.LoginActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="32dp">
        <!--标题-->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:textSize="32sp"
                android:layout_marginVertical="16dp"/>
        <!--账号-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">
            <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account"
                    android:textAlignment="center"
                    android:textSize="20sp"/>
            <EditText
                    android:id="@+id/tbx_account"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:inputType="number"/>
        </LinearLayout>
        <!--密码-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp">
            <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_password"
                    android:textAlignment="center"
                    android:textSize="20sp"/>
            <EditText
                    android:id="@+id/tbx_password"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:inputType="textPassword"/>
        </LinearLayout>
        <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:textSize="16sp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/text_forget_pw"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="64dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_register"
                    android:textSize="16sp"/>
            <Button
                    android:id="@+id/btn_login_local"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_use_local"
                    android:textSize="16sp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>