<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.page.UserDetailActivity">
        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="4dp"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account"
                    android:textSize="18sp"
                    android:gravity="center"/>
            <TextView
                    android:id="@+id/tv_ud_accout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textAlignment="textStart"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="4dp"
                android:gravity="center_vertical">
            <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_nickname"
                    android:textSize="18sp"
                    android:gravity="center"/>
            <EditText
                    android:id="@+id/edt_ud_nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:textAlignment="textStart"/>
        </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
    </LinearLayout>
        <Button
                android:id="@+id/btn_exitLogin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="60dp"
                android:layout_marginVertical="16dp"
                android:text="@string/text_exitLogin">

        </Button>
</LinearLayout>